tooling/nargo_cli/tests/snapshots/compile_failure/dup_trait_items_2/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused trait MyTrait
  ┌─ src/main.nr:1:7
  │
1 │ trait MyTrait {
  │       ------- unused trait
  │

error: Duplicate definitions of trait associated item with name SomeConst found
  ┌─ src/main.nr:2:7
  │
2 │   let SomeConst: u32;
  │       --------- First definition found here
3 │   let SomeConst: Field;
  │       --------- Second definition found here
  │

error: Duplicate definitions of trait associated item with name SomeConst found
  ┌─ src/main.nr:2:7
  │
2 │   let SomeConst: u32;
  │       --------- First definition found here
3 │   let SomeConst: Field;
  │       --------- Second definition found here
  │

Aborting due to 2 previous errors
